--- a/desktop.html
+++ b/desktop.html
@@ -2,138 +2,99 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>BJJ Submissions Counter — Overview</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BJJ Submissions Counter — Desktop</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta name="theme-color" content="#0ea5e9" />
+  <meta name="description" content="BJJ Submissions Counter is a fast, offline-first Brazilian Jiu-Jitsu submissions tracker. Best experienced on mobile as a PWA." />
+  <link rel="manifest" href="/manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+  <link rel="canonical" href="https://www.bjjcounter.com/desktop.html" />
   <style>
+    *, *::before, *::after { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body {
+      margin: 0;
+      font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      -webkit-font-smoothing: antialiased;
+      color: var(--fg);
+      background: var(--bg);
+      -webkit-tap-highlight-color: transparent;
+    }
     :root{
-      --bg:#f9fafb; --fg:#111827; --muted:#4b5563; --card:#ffffff;
-      --accent1:#0ea5e9; --accent2:#22d3ee; --ring:rgba(34,211,238,.35);
-    }
-    @media (prefers-color-scheme: dark){
-      :root{
-        --bg:#0b1020; --fg:#eaf1ff; --muted:#9ca3af; --card:#121830;
-        --ring:rgba(34,211,238,.25);
-      }
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0; font-family:ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,Helvetica,Arial;
-      background:var(--bg); color:var(--fg); display:flex; flex-direction:column; align-items:center;
-      padding:64px 24px; text-align:center;
-    }
-    .wrap{max-width:1100px; width:100%;}
-    h1{
-      font-size:clamp(2.6rem,4vw,3.6rem); margin:0 0 .25em;
-      background:linear-gradient(90deg,var(--accent1),var(--accent2));
-      -webkit-background-clip:text; -webkit-text-fill-color:transparent;
-    }
-    .lead{
-      margin:0 auto 1.2em; max-width:950px; font-size:clamp(1.2rem,1.6vw,1.35rem); line-height:1.75; color:var(--muted);
-    }
-
-    /* Phone mockup */
-    .showcase{
-      display:grid; grid-template-columns: 1fr 1fr; gap:48px; align-items:center; justify-items:center;
-      margin:48px auto; max-width:1100px;
-    }
-    @media (max-width: 980px){ .showcase{ grid-template-columns: 1fr; gap:36px; } }
-
-    .phone{
-      position:relative; width:360px; height:740px; border-radius:40px;
-      background:linear-gradient(145deg,#0d1226,#161d3a);
-      box-shadow: 0 30px 70px rgba(0,0,0,.35), inset 0 0 0 2px rgba(255,255,255,.05);
-      border:1px solid rgba(148,163,184,.18);
-      padding:16px; display:flex; align-items:center; justify-content:center;
+      --bg:#0b1020; --card:#121830; --card-2:#0f1428; --fg:#eaf1ff; --muted:#b7c4e1;
+      --primary:#0ea5e9; --primary-2:#22d3ee; --ring:rgba(34,211,238,.35); --shadow:0 10px 30px rgba(2,6,23,.4);
     }
     @media (prefers-color-scheme: light){
-      .phone{
-        background:linear-gradient(145deg,#dfe8ff,#eef2ff);
-        box-shadow: 0 30px 60px rgba(0,0,0,.15), inset 0 0 0 2px rgba(0,0,0,.04);
-        border-color: rgba(0,0,0,.08);
-      }
+      :root{ --bg:#f6f8ff; --card:#ffffff; --card-2:#f2f5ff; --fg:#0b1020; --muted:#475569; --shadow:0 8px 24px rgba(2,6,23,.08); }
     }
-    .phone::before{
-      /* notch */
-      content:""; position:absolute; top:10px; left:50%; transform:translateX(-50%);
-      width:160px; height:24px; background:var(--card); border-radius:0 0 16px 16px;
-      box-shadow: 0 2px 6px rgba(0,0,0,.18);
+    .wrap{
+      max-width: 720px; margin: 0 auto; min-height: 100%;
+      display: grid; grid-template-rows: auto 1fr auto;
+      padding: 16px clamp(12px,4vw,20px) calc(16px + env(safe-area-inset-bottom)); gap: 14px;
     }
-    .phone::after{
-      /* side button */
-      content:""; position:absolute; right:-3px; top:120px; width:4px; height:60px; border-radius:2px;
-      background:linear-gradient(180deg,#94a3b8,#64748b);
-      opacity:.4;
+    header{
+      display:flex; align-items:center; justify-content:space-between;
+      padding:10px 12px; background:linear-gradient(180deg, rgba(34,211,238,.06), transparent);
+      border-radius:16px;
     }
-    .screen{
-      width:100%; height:100%; border-radius:28px; overflow:hidden; background:#000;
-      box-shadow: inset 0 0 0 1px rgba(255,255,255,.06);
+    .title{ font-weight:800; letter-spacing:.3px; font-size:20px; display:flex; align-items:center; gap:10px; }
+    .title .dot{ width:10px; height:10px; border-radius:50%;
+      background: radial-gradient(40% 40% at 30% 30%, var(--primary-2), var(--primary));
+      box-shadow:0 0 18px var(--ring);
     }
-    .screen img{ display:block; width:100%; height:100%; object-fit:cover; }
-
-    .bullets{
-      text-align:left; max-width:600px; background:var(--card); border-radius:20px; padding:24px;
-      box-shadow: 0 16px 40px rgba(0,0,0,.15); border:1px solid rgba(148,163,184,.15);
+    .actions { display:flex; gap:8px; align-items:center; }
+    .ghost { background:transparent; border:1px solid rgba(148,163,184,.25); color:var(--muted);
+      padding:8px 10px; border-radius:10px; font-size:13px; text-decoration:none;
     }
-    .bullets h2{ margin:0 0 .6em; font-size:clamp(1.6rem,2vw,2rem); }
-    .bullets ul{ margin:0; padding-left:1.1em; display:grid; gap:12px; font-size:1.15rem; color:var(--fg); }
-    .bullets li{ line-height:1.6; color:var(--muted); }
-    .bullets li strong{ color:var(--fg); }
-
-    .cta{
-      margin:40px 0 0; display:inline-block; text-decoration:none; font-weight:800; letter-spacing:.2px;
-      padding:18px 28px; border-radius:14px; font-size:1.2rem; color:#fff;
-      background:linear-gradient(90deg,var(--accent1),var(--accent2));
-      box-shadow: 0 10px 24px rgba(34,211,238,.35), inset 0 0 0 1px rgba(255,255,255,.15);
-      transition: transform .15s ease, box-shadow .15s ease;
+    main{ display:grid; gap:12px; }
+    .card{
+      background:var(--card); border-radius:16px; padding:16px; box-shadow:var(--shadow);
+      border:1px solid rgba(148,163,184,.12);
     }
-    .cta:hover{ transform: translateY(-2px); box-shadow: 0 14px 32px rgba(34,211,238,.45); }
-
-    footer{
-      margin:56px auto 0; max-width:900px; color:var(--muted); font-size:1.05rem; line-height:1.7;
+    h1{ font-size:22px; margin:0 0 8px; }
+    p{ margin:8px 0; line-height:1.5; }
+    ul{ margin:8px 0 8px 18px; }
+    .cta-row{ display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
+    .primary {
+      background: linear-gradient(180deg, rgba(34,211,238,0.12), rgba(14,165,233,0.18));
+      box-shadow: inset 0 0 0 1px rgba(14,165,233,0.35);
+      color: var(--fg);
+      padding: 10px 12px; border-radius: 10px; font-weight: 700; text-decoration: none;
+      border: 0;
     }
-    .mono{ font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace; }
+    footer{ color:var(--muted); font-size:12px; display:flex; justify-content:space-between; align-items:center; }
+    a{ color:var(--primary-2); text-decoration:underline; }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <h1>BJJ Submissions Counter</h1>
-    <p class="lead">
-      Track what actually works in sparring. Log each submission you land and the <strong>opponent’s belt level</strong>
-      (white, blue, purple, brown, black). The app keeps totals and simple breakdowns so you can
-      see your A-game develop over time. <em>No accounts, no cloud — your data stays on your phone and works offline.</em>
-    </p>
-
-    <section class="showcase">
-      <div class="phone" aria-hidden="true">
-        <div class="screen">
-          <!-- Replace this with a real screenshot of your mobile app -->
-          <img src="screenshot.png" alt="BJJ Submissions Counter app preview on a phone">
-        </div>
+    <header>
+      <div class="title"><span class="dot"></span> BJJ Submissions Counter</div>
+      <div class="actions">
+        <a class="ghost" href="/privacy.html">Privacy</a>
+        <a class="ghost" href="/">Open app</a>
       </div>
+    </header>
 
-      <div class="bullets">
-        <h2>Why grapplers like it</h2>
+    <main>
+      <section class="card">
+        <h1>Best on mobile</h1>
+        <p>BJJ Submissions Counter is designed for quick logging during training and works great as a mobile Progressive Web App (PWA).</p>
         <ul>
-          <li><strong>Fast logging</strong> — tap a submission, choose belt. Back to rolling.</li>
-          <li><strong>Your stats, at a glance</strong> — totals per move and belt. See which subs you truly hit.</li>
-          <li><strong>Add your favorites</strong> — extend the list with your own submissions anytime.</li>
-          <li><strong>Offline & private</strong> — saved in your browser cache (<span class="mono">localStorage</span>) on your device.</li>
-          <li><strong>Simple by design</strong> — we track against <em>belt level</em>, not individual people.</li>
+          <li>Open this site on your iPhone or Android device.</li>
+          <li>Add it to your Home Screen for 1-tap access and offline use.</li>
+          <li>All data stays on your device; no accounts, no tracking.</li>
         </ul>
-
-        <!-- Feedback CTA instead of “open app” -->
-       <a class="cta" href="mailto:info@bjjcounter.com?subject=BJJ%20Submissions%20Counter%20Feedback">
-  Send Feedback ✉️
-</a>
-      </div>
-    </section>
+        <div class="cta-row">
+          <a class="primary" href="/">Open the app</a>
+          <a class="ghost" href="/privacy.html">Privacy policy</a>
+        </div>
+      </section>
+    </main>
 
     <footer>
-      <strong>How to install</strong><br>
-      On <strong>Android</strong>, Chrome may suggest installation automatically (or use the browser menu → <em>Install app</em>).<br>
-      On <strong>iPhone</strong>, open in Safari and use <em>Share → Add to Home Screen</em> for an app-like experience.<br><br>
-      Data model: we store a small JSON structure in your device’s cache with submission names and a count per belt
-      (e.g. <span class="mono">{ submissions: { armbar: { white: 3, blue: 4, ... } } }</span>).
+      <span>© BJJ Submissions Counter</span>
+      <a href="/privacy.html">Privacy</a>
     </footer>
   </div>
 </body>
