--- a/index.html
+++ b/index.html
@@ -405,6 +405,10 @@
       Grateful for feedback! 💬
       <a href="mailto:info@bjjcounter.com?subject=BJJ%20Submissions%20Counter%20Feedback" style="color: var(--primary-2); text-decoration: underline;">info@bjjcounter.com</a>
     </p>
+    <p style="margin-top:12px; font-size:12px; color:var(--muted);">
+  View our <a href="/privacy.html" style="color: var(--primary-2); text-decoration: underline;">Privacy Policy</a>.
+</p>
+
     <div style="margin-top:14px;display:flex;flex-direction:column;gap:8px;">
       <button class="reset" id="resetBtn">Reset all data</button>
       <button class="ghost" id="exportBtn">Export</button>
