--- a/index.html
+++ b/index.html
@@ -286,9 +286,19 @@
     </nav>
 
     <main>
-      <!-- Log view -->
-      <section id="view-log" class="grid" role="tabpanel" aria-labelledby="tab-log">
+<section id="view-log" class="grid" role="tabpanel" aria-labelledby="tab-log">
+  <button class="card submission" data-submission="__total" aria-label="Total of all moves">
+    <div class="content">
+      <div class="icon" aria-hidden="true"></div>
+      <div>
+        <h3>Total</h3>
+        <div class="muted">All submissions combined</div>
+      </div>
+      <div class="count" id="count-__total">0</div>
+    </div>
+  </button>
   <div class="foot"></div>
+</section>
 </section>
 
 
